--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-      "name": "TIANA 2.0",
-      "logo": "https://telegra.ph/file/bcd7b3dec21d1c2b2583a.png",
+      "name": "Tannu",
+      "logo": "https://telegra.ph/file/8c22c038065667062da73.jpg",
       "description": "Telegram group management bot.",
       "keywords": [
          "telegram",
@@ -9,7 +9,7 @@
          "manager",
          "Emcee"
       ],   
-   "repository": "https://github.com/prince301102/tiana-2.0",
+   "repository": "https://github.com/Imteyazking/tiana-2.0",
    "addons": [
       {
          "options": {
@@ -47,7 +47,7 @@
       "BOT_ID": {
          "description": "Your bot ID.. Use any other bot to get it.",
          "required": false,
-         "value": "1836395711"
+         "value": "1799098485"
       },
       "HEROKU_API_KEY": {
         "description": "Your Heroku API key, get it from 'https://dashboard.heroku.com/account'",
@@ -59,7 +59,7 @@
       },
       "OWNER_USERNAME": {
          "description": "Your username without the @",
-         "value": ""
+         "value": "Imteyaz_king"
       },
       "SUPPORT_CHAT": {
          "description": "Your Telegram support group chat username where your users will go and bother you with shit But be like: MyGroupChatUsernameBlah. If this ever points to masha support than consider you made an enemy.",
@@ -82,12 +82,12 @@
      "EVENT_LOGS": {
          "description": "Event logs channel to note down important bot level events, recommend to make this public. ex: '-123456'",
          "required": true,
-         "value": "-123456798"
+         "value": "-1001381944580"
       },
       "JOIN_LOGGER": {
          "description": "A channel where bot will print who added it to what group, useful during debugging or spam handling.",
          "required": true,
-         "value": "-123456798"
+         "value": "-1001381944580"
       },      
       "CASH_API_KEY": {
          "description": "Required for currency converter. Get yours from https://www.alphavantage.co/support/#api-key",
@@ -174,7 +174,7 @@
       "DONATION_LINK": {
          "description": "Optional: link where you would like to receive donations. If you are a noob, better leave it linking to paul",
          "required": false,
-         "value": "https://t.me/prince_3011"
+         "value": "https://t.me/Imteyazking"
       },
       "DEL_CMDS": {
          "description": "Set this to True if you want to delete command messages from users who don't have the perms to run that command.",
