--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
          "manager",
          "Emcee"
       ],   
-   "repository": "https://github.com/Imteyazking/tiana-2.0",
+   "repository": "https://github.com/prince301102/tiana-2.0",
    "addons": [
       {
          "options": {
